Closed
Bug 347348
Opened 19 years ago
Closed 19 years ago
Removing text node from <mo> causes "ASSERTION: null arg" and has no visual effect
Categories
(Core :: MathML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: rbs)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
504 bytes,
application/xhtml+xml
|
Details | |
1.99 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Removing the text node from <mo> causes "ASSERTION: null arg" and has no visual effect.
Reporter | ||
Comment 1•19 years ago
|
||
Give <mo> a chance to process and sync its internal text-dependent state when its child text frame is removed. (This is slightly different from the case when the text is merily modified -- currently taken care of by |ReflowDirtyChild|. In the case of this bug when the child is removed, nobody is there to call |ReflowDirtyChild|... So this patch goes back to the basics by notifying <mo> with the base |ChildListChanged| method that the MathML code has.)
Attachment #232492 -
Flags: superreview?(roc)
Attachment #232492 -
Flags: review?(roc)
Attachment #232492 -
Flags: superreview?(roc)
Attachment #232492 -
Flags: superreview+
Attachment #232492 -
Flags: review?(roc)
Attachment #232492 -
Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•