Fix bug 347348 - Removing text node from <mo> causes 'ASSERTION: null arg' and has no visual effect, r+sr=roc